# goat

./: .gitignore  README.md  goat.py  main.py  pyproject.toml
goat/: configuration.py  entry.py  main.py  project.py  project_configuration.py  template.py
goat/command/: command.py  command_builder.py  command_builder_factory.py  command_results.py  command_runner.py  command_type.py  compile_command_builder.py  compile_command_builder_factory.py  link_command_builder.py  link_command_builder_factory.py
goat/command/builder/: command_builder.py  command_builder_factory.py  gpp_command_builder.py
goat/command/compile/: compile_command_builder.py  compile_command_builder_factory.py  gpp_compile_command_builder.py
goat/command/configuration/: compile_configuration.py  compile_configuration_builder.py  link_configuration.py  link_configuration_builder.py
goat/command/link/: gpp_link_command_builder.py  ld_link_command_builder.py  link_command_builder.py  link_command_builder_factory.py
goat/command/parameters/: compile_parameters.py  compile_parameters_builder.py  link_parameters.py  link_parameters_builder.py
goat/configuration/: build_configuration.py  build_configuration_entry.py  build_configuration_values.py  compilation_configuration.py  compilation_configuration_values.py  configuration.py  configuration_root.py  linkage_configuration.py  linkage_configuration_values.py
goat/project/: build_mode.py  project.py  project_builder.py  project_configuration.py  project_configuration_entry.py  project_configuration_entry_factory.py  project_configuration_values.py  project_configuration_variant.py  project_configuration_variant_factory.py  project_initializer.py  project_manager.py  project_path_resolver.py
goat/project/changes/: file_timestamps.py  project_changes.py  project_changes_factory.py  project_timestamps.py  project_timestamps_factory.py
goat/project/configuration/: project_configuration.py  project_configuration_variant.py  (+1 more)
goat/raw_configuration/: configuration_base.py  packages_configuration.py
goat/template/: configuration.template  template.py  test.template
goat/templates/: configuration.template  test.template
(+29 files in other folders)
